--- a/src/sample/sample.fxml
+++ b/src/sample/sample.fxml
@@ -1,8 +1,51 @@
-<?import javafx.geometry.Insets?>
-<?import javafx.scene.layout.GridPane?>
+<?xml version="1.0" encoding="UTF-8"?>
 
 <?import javafx.scene.control.Button?>
-<?import javafx.scene.control.Label?>
-<GridPane fx:controller="sample.Controller"
-          xmlns:fx="http://javafx.com/fxml" alignment="center" hgap="10" vgap="10">
+<?import javafx.scene.control.TextField?>
+<?import javafx.scene.layout.AnchorPane?>
+<?import javafx.scene.layout.ColumnConstraints?>
+<?import javafx.scene.layout.GridPane?>
+<?import javafx.scene.layout.RowConstraints?>
+<?import javafx.scene.text.Font?>
+<?import javafx.scene.text.Text?>
+
+
+<GridPane alignment="center" hgap="10" vgap="10" xmlns="http://javafx.com/javafx/8.0.171" xmlns:fx="http://javafx.com/fxml/1" fx:controller="sample.Controller">
+   <columnConstraints>
+      <ColumnConstraints />
+   </columnConstraints>
+   <rowConstraints>
+      <RowConstraints />
+   </rowConstraints>
+   <children>
+      <AnchorPane prefHeight="546.0" prefWidth="1079.0">
+         <children>
+            <Text fill="#2718cd" layoutX="487.0" layoutY="46.0" strokeType="OUTSIDE" strokeWidth="0.0" text="KALAHA" textAlignment="CENTER">
+               <font>
+                  <Font name="System Bold" size="24.0" />
+               </font>
+            </Text>
+            <Button layoutX="28.0" layoutY="52.0" mnemonicParsing="false" text="New Game" />
+            <Button layoutX="121.0" layoutY="114.0" mnemonicParsing="false" prefHeight="74.0" prefWidth="118.0" />
+            <Button layoutX="255.0" layoutY="114.0" mnemonicParsing="false" prefHeight="74.0" prefWidth="118.0" />
+            <Button layoutX="383.0" layoutY="114.0" mnemonicParsing="false" prefHeight="74.0" prefWidth="118.0" />
+            <Button layoutX="516.0" layoutY="114.0" mnemonicParsing="false" prefHeight="74.0" prefWidth="118.0" />
+            <Button layoutX="652.0" layoutY="114.0" mnemonicParsing="false" prefHeight="74.0" prefWidth="118.0" />
+            <Button layoutX="784.0" layoutY="114.0" mnemonicParsing="false" prefHeight="74.0" prefWidth="118.0" />
+            <Button layoutX="126.0" layoutY="366.0" mnemonicParsing="false" prefHeight="74.0" prefWidth="118.0" />
+            <Button layoutX="260.0" layoutY="366.0" mnemonicParsing="false" prefHeight="74.0" prefWidth="118.0" />
+            <Button layoutX="388.0" layoutY="366.0" mnemonicParsing="false" prefHeight="74.0" prefWidth="118.0" />
+            <Button layoutX="521.0" layoutY="366.0" mnemonicParsing="false" prefHeight="74.0" prefWidth="118.0" />
+            <Button layoutX="657.0" layoutY="366.0" mnemonicParsing="false" prefHeight="74.0" prefWidth="118.0" />
+            <Button layoutX="789.0" layoutY="366.0" mnemonicParsing="false" prefHeight="74.0" prefWidth="118.0" />
+            <TextField alignment="CENTER" layoutX="423.0" layoutY="258.0" text="Player' Turn" />
+            <TextField alignment="CENTER" layoutX="180.0" layoutY="68.0" text="P1 Score:" />
+            <TextField alignment="CENTER" layoutX="691.0" layoutY="68.0" text="P2 Score:" />
+            <Button layoutX="770.0" layoutY="483.0" mnemonicParsing="false" text="Rules" />
+            <Button layoutX="878.0" layoutY="483.0" mnemonicParsing="false" text="Close" />
+            <Button layoutX="36.0" layoutY="199.0" mnemonicParsing="false" prefHeight="156.0" prefWidth="118.0" />
+            <Button layoutX="860.0" layoutY="199.0" mnemonicParsing="false" prefHeight="156.0" prefWidth="118.0" />
+         </children>
+      </AnchorPane>
+   </children>
 </GridPane>
