--- a/src/myCss.css
+++ b/src/myCss.css
@@ -1,18 +1,27 @@
 .p1buttons{
     -fx-background-color: linear-gradient(#ff5400, #be7c4a);
-    -fx-background-radius: 30 ;
+    -fx-background-radius: 100 ;
 
 }
 .p1buttons:hover{
     -fx-cursor: hand;
-    -fx-fill: black;
+    -fx-background-color: #22b13c;
 }
 
 .p2buttons{
     -fx-background-color: linear-gradient(#49a5ff, #be92be);
-    -fx-background-radius: 30 ;
+    -fx-background-radius: 100 ;
 }
 .p2buttons:hover {
     -fx-cursor: hand;
-    -fx-fill: black;
+    -fx-background-color: #f33fe1;
+}
+.otherButtons{
+    -fx-background-color: linear-gradient(#d6ffe3, #be2e1f);
+    -fx-background-radius: 20 ;
+
+}
+.otherButtons:hover{
+    -fx-cursor: hand;
+    -fx-background-color: #e3f394;
 }
