--- a/src/sample/sample.fxml
+++ b/src/sample/sample.fxml
@@ -1,14 +1,13 @@
 <?xml version="1.0" encoding="UTF-8"?>
 
 <?import javafx.scene.control.Button?>
-<?import javafx.scene.control.TextField?>
+<?import javafx.scene.control.Label?>
 <?import javafx.scene.layout.AnchorPane?>
 <?import javafx.scene.layout.ColumnConstraints?>
 <?import javafx.scene.layout.GridPane?>
 <?import javafx.scene.layout.RowConstraints?>
 <?import javafx.scene.text.Font?>
 <?import javafx.scene.text.Text?>
-
 
 <GridPane alignment="center" hgap="10" vgap="10" xmlns="http://javafx.com/javafx/8.0.171" xmlns:fx="http://javafx.com/fxml/1" fx:controller="sample.Controller">
    <columnConstraints>
@@ -18,14 +17,14 @@
       <RowConstraints />
    </rowConstraints>
    <children>
-      <AnchorPane prefHeight="546.0" prefWidth="1079.0">
+      <AnchorPane prefHeight="546.0" prefWidth="1079.0" style="-fx-background-radius: 50;">
          <children>
-            <Text fill="#2718cd" layoutX="487.0" layoutY="46.0" strokeType="OUTSIDE" strokeWidth="0.0" text="KALAHA" textAlignment="CENTER">
+            <Text fill="#2718cd" layoutX="480.0" layoutY="46.0" strokeType="OUTSIDE" strokeWidth="0.0" text="KALAHA" textAlignment="CENTER">
                <font>
                   <Font name="System Bold" size="24.0" />
                </font>
             </Text>
-            <Button fx:id="newGameButton" layoutX="28.0" layoutY="52.0" mnemonicParsing="false" text="New Game" />
+            <Button fx:id="newGameButton" layoutX="28.0" layoutY="52.0" mnemonicParsing="false" styleClass="otherButtons" stylesheets="@../myCss.css" text="New Game" />
             <Button fx:id="pit12" alignment="CENTER" layoutX="121.0" layoutY="114.0" mnemonicParsing="false" prefHeight="74.0" prefWidth="118.0" styleClass="p2buttons" stylesheets="@../myCss.css" />
             <Button fx:id="pit11" alignment="CENTER" layoutX="255.0" layoutY="114.0" mnemonicParsing="false" prefHeight="74.0" prefWidth="118.0" styleClass="p2buttons" stylesheets="@../myCss.css" />
             <Button fx:id="pit10" alignment="CENTER" layoutX="383.0" layoutY="114.0" mnemonicParsing="false" prefHeight="74.0" prefWidth="118.0" styleClass="p2buttons" stylesheets="@../myCss.css" />
@@ -38,13 +37,28 @@
             <Button fx:id="pit4" alignment="CENTER" layoutX="521.0" layoutY="366.0" mnemonicParsing="false" prefHeight="74.0" prefWidth="118.0" styleClass="p1buttons" stylesheets="@../myCss.css" />
             <Button fx:id="pit5" alignment="CENTER" layoutX="657.0" layoutY="366.0" mnemonicParsing="false" prefHeight="74.0" prefWidth="118.0" styleClass="p1buttons" stylesheets="@../myCss.css" />
             <Button fx:id="pit6" alignment="CENTER" layoutX="789.0" layoutY="366.0" mnemonicParsing="false" prefHeight="74.0" prefWidth="118.0" styleClass="p1buttons" stylesheets="@../myCss.css" />
-            <TextField fx:id="playerTurn" alignment="CENTER" layoutX="423.0" layoutY="258.0" text="Player's Turn" />
-            <TextField fx:id="p1Score" alignment="CENTER" layoutX="180.0" layoutY="68.0" text="P1 Score:" />
-            <TextField fx:id="p2Score" alignment="CENTER" layoutX="691.0" layoutY="68.0" text="P2 Score:" />
-            <Button fx:id="rulesButton" layoutX="770.0" layoutY="483.0" mnemonicParsing="false" text="Rules" />
-            <Button fx:id="closeButton" layoutX="878.0" layoutY="483.0" mnemonicParsing="false" text="Close" />
+            <Button fx:id="rulesButton" layoutX="770.0" layoutY="483.0" mnemonicParsing="false" styleClass="otherButtons" stylesheets="@../myCss.css" text="Rules" />
+            <Button fx:id="closeButton" layoutX="878.0" layoutY="483.0" mnemonicParsing="false" styleClass="otherButtons" stylesheets="@../myCss.css" text="Close" />
             <Button fx:id="P2House" alignment="CENTER" layoutX="36.0" layoutY="199.0" mnemonicParsing="false" prefHeight="156.0" prefWidth="118.0" styleClass="p2buttons" stylesheets="@../myCss.css" />
             <Button fx:id="P1House" alignment="CENTER" layoutX="860.0" layoutY="199.0" mnemonicParsing="false" prefHeight="156.0" prefWidth="118.0" styleClass="p1buttons" stylesheets="@../myCss.css" />
+            <Text fill="#737cfc" layoutX="190.0" layoutY="88.0" strokeType="OUTSIDE" strokeWidth="0.0" text="P2 Score:" textAlignment="JUSTIFY" wrappingWidth="80.00000286102295">
+               <font>
+                  <Font name="System Bold" size="18.0" />
+               </font>
+            </Text>
+            <Text fill="#dd7124" layoutX="592.0" layoutY="88.0" strokeType="OUTSIDE" strokeWidth="0.0" text="P1 Score:" textAlignment="JUSTIFY" wrappingWidth="80.00000286102295">
+               <font>
+                  <Font name="System Bold" size="18.0" />
+               </font>
+            </Text>
+            <Label fx:id="playerTurn" layoutX="484.0" layoutY="258.0" prefHeight="38.0" prefWidth="159.0" style="-fx-border-color: green;" />
+            <Label fx:id="p2Score" layoutX="270.0" layoutY="64.0" prefHeight="38.0" prefWidth="159.0" style="-fx-border-color: blue;" />
+            <Label fx:id="p1Score" layoutX="671.0" layoutY="64.0" prefHeight="38.0" prefWidth="159.0" style="-fx-border-color: #ff5400;" />
+            <Text fill="#9c197f" layoutX="360.0" layoutY="284.0" strokeType="OUTSIDE" strokeWidth="0.0" text="Player's Turn:" textAlignment="JUSTIFY" wrappingWidth="118.00001291930676">
+               <font>
+                  <Font name="System Bold" size="18.0" />
+               </font>
+            </Text>
          </children>
       </AnchorPane>
    </children>
