--- a/src/sample/sample.fxml
+++ b/src/sample/sample.fxml
@@ -24,7 +24,7 @@
                   <Font name="System Bold" size="24.0" />
                </font>
             </Text>
-            <Button fx:id="newGameButton" layoutX="28.0" layoutY="52.0" mnemonicParsing="false" styleClass="otherButtons" stylesheets="@../myCss.css" text="New Game" />
+            <Button fx:id="newGameButton" layoutX="28.0" layoutY="52.0" mnemonicParsing="false" onAction="#restart" styleClass="otherButtons" stylesheets="@../myCss.css" text="New Game" />
             <Button fx:id="pit12" alignment="CENTER" layoutX="121.0" layoutY="114.0" mnemonicParsing="false" prefHeight="74.0" prefWidth="118.0" styleClass="p2buttons" stylesheets="@../myCss.css" />
             <Button fx:id="pit11" alignment="CENTER" layoutX="255.0" layoutY="114.0" mnemonicParsing="false" prefHeight="74.0" prefWidth="118.0" styleClass="p2buttons" stylesheets="@../myCss.css" />
             <Button fx:id="pit10" alignment="CENTER" layoutX="383.0" layoutY="114.0" mnemonicParsing="false" prefHeight="74.0" prefWidth="118.0" styleClass="p2buttons" stylesheets="@../myCss.css" />
@@ -38,7 +38,7 @@
             <Button fx:id="pit5" alignment="CENTER" layoutX="657.0" layoutY="366.0" mnemonicParsing="false" prefHeight="74.0" prefWidth="118.0" styleClass="p1buttons" stylesheets="@../myCss.css" />
             <Button fx:id="pit6" alignment="CENTER" layoutX="789.0" layoutY="366.0" mnemonicParsing="false" prefHeight="74.0" prefWidth="118.0" styleClass="p1buttons" stylesheets="@../myCss.css" />
             <Button fx:id="rulesButton" layoutX="770.0" layoutY="483.0" mnemonicParsing="false" styleClass="otherButtons" stylesheets="@../myCss.css" text="Rules" />
-            <Button fx:id="closeButton" layoutX="878.0" layoutY="483.0" mnemonicParsing="false" styleClass="otherButtons" stylesheets="@../myCss.css" text="Close" />
+            <Button fx:id="closeButton" layoutX="878.0" layoutY="483.0" mnemonicParsing="false" onAction="#close" styleClass="otherButtons" stylesheets="@../myCss.css" text="Close" />
             <Button fx:id="P2House" alignment="CENTER" layoutX="36.0" layoutY="199.0" mnemonicParsing="false" prefHeight="156.0" prefWidth="118.0" styleClass="p2buttons" stylesheets="@../myCss.css" />
             <Button fx:id="P1House" alignment="CENTER" layoutX="860.0" layoutY="199.0" mnemonicParsing="false" prefHeight="156.0" prefWidth="118.0" styleClass="p1buttons" stylesheets="@../myCss.css" />
             <Text fill="#737cfc" layoutX="190.0" layoutY="88.0" strokeType="OUTSIDE" strokeWidth="0.0" text="P2 Score:" textAlignment="JUSTIFY" wrappingWidth="80.00000286102295">
