--- a/src/sample/sample.fxml
+++ b/src/sample/sample.fxml
@@ -25,7 +25,7 @@
                   <Font name="System Bold" size="24.0" />
                </font>
             </Text>
-            <Button fx:id="newGameButton" layoutX="28.0" layoutY="52.0" mnemonicParsing="false" onAction="#restart" styleClass="otherButtons" stylesheets="@../myCss.css" text="New Game" />
+            <Button fx:id="newGameButton" layoutX="117.0" layoutY="52.0" mnemonicParsing="false" onAction="#restart" styleClass="otherButtons" stylesheets="@../myCss.css" text="New Game" />
             <Button fx:id="pit12" alignment="CENTER" layoutX="121.0" layoutY="114.0" mnemonicParsing="false" onAction="#test" prefHeight="74.0" prefWidth="118.0" styleClass="p2buttons" stylesheets="@../myCss.css" />
             <Button fx:id="pit11" alignment="CENTER" layoutX="255.0" layoutY="114.0" mnemonicParsing="false" prefHeight="74.0" prefWidth="118.0" styleClass="p2buttons" stylesheets="@../myCss.css" />
             <Button fx:id="pit10" alignment="CENTER" layoutX="383.0" layoutY="114.0" mnemonicParsing="false" prefHeight="74.0" prefWidth="118.0" styleClass="p2buttons" stylesheets="@../myCss.css" />
@@ -53,7 +53,7 @@
                </font>
             </Text>
             <Label fx:id="playerTurn" layoutX="484.0" layoutY="258.0" prefHeight="38.0" prefWidth="159.0" style="-fx-border-color: green;" />
-            <Label fx:id="p2Score" layoutX="270.0" layoutY="64.0" prefHeight="38.0" prefWidth="159.0" style="-fx-border-color: blue;" />
+            <Label fx:id="p2Score" layoutX="257.0" layoutY="62.0" prefHeight="38.0" prefWidth="159.0" style="-fx-border-color: blue;" />
             <Label fx:id="p1Score" layoutX="671.0" layoutY="64.0" prefHeight="38.0" prefWidth="159.0" style="-fx-border-color: #ff5400;" />
             <Text fill="#9c197f" layoutX="360.0" layoutY="284.0" strokeType="OUTSIDE" strokeWidth="0.0" text="Player's Turn:" textAlignment="JUSTIFY" wrappingWidth="118.00001291930676">
                <font>
@@ -74,6 +74,7 @@
             <TextField fx:id="tfPit3" layoutX="425.0" layoutY="391.0" prefHeight="12.0" prefWidth="45.0" />
             <TextField fx:id="tfPit2" layoutX="297.0" layoutY="391.0" prefHeight="12.0" prefWidth="45.0" />
             <TextField fx:id="tfPit1" layoutX="163.0" layoutY="391.0" prefHeight="12.0" prefWidth="45.0" />
+            <Button fx:id="startGameButton" layoutX="29.0" layoutY="52.0" mnemonicParsing="false" onAction="#buttonNames" styleClass="otherButtons" stylesheets="@../myCss.css" text="START GAME" />
          </children>
       </AnchorPane>
    </children>
