--- a/src/sample/sample.fxml
+++ b/src/sample/sample.fxml
@@ -26,7 +26,7 @@
                </font>
             </Text>
             <Button fx:id="newGameButton" layoutX="124.0" layoutY="52.0" mnemonicParsing="false" onAction="#restart" styleClass="otherButtons" stylesheets="@../myCss.css" text="New Game" />
-            <Button fx:id="pit12" alignment="CENTER" layoutX="121.0" layoutY="114.0" mnemonicParsing="false" onAction="#test" prefHeight="74.0" prefWidth="118.0" styleClass="p2buttons" stylesheets="@../myCss.css" />
+            <Button fx:id="pit12" alignment="CENTER" layoutX="121.0" layoutY="114.0" mnemonicParsing="false" prefHeight="74.0" prefWidth="118.0" styleClass="p2buttons" stylesheets="@../myCss.css" />
             <Button fx:id="pit11" alignment="CENTER" layoutX="255.0" layoutY="114.0" mnemonicParsing="false" prefHeight="74.0" prefWidth="118.0" styleClass="p2buttons" stylesheets="@../myCss.css" />
             <Button fx:id="pit10" alignment="CENTER" layoutX="383.0" layoutY="114.0" mnemonicParsing="false" prefHeight="74.0" prefWidth="118.0" styleClass="p2buttons" stylesheets="@../myCss.css" />
             <Button fx:id="pit9" alignment="CENTER" layoutX="516.0" layoutY="114.0" mnemonicParsing="false" prefHeight="74.0" prefWidth="118.0" styleClass="p2buttons" stylesheets="@../myCss.css">
@@ -42,7 +42,7 @@
             <Button fx:id="pit5" alignment="CENTER" layoutX="657.0" layoutY="366.0" mnemonicParsing="false" prefHeight="74.0" prefWidth="118.0" styleClass="p1buttons" stylesheets="@../myCss.css" />
             <Button fx:id="pit6" alignment="CENTER" layoutX="789.0" layoutY="366.0" mnemonicParsing="false" prefHeight="74.0" prefWidth="118.0" styleClass="p1buttons" stylesheets="@../myCss.css" />
             <Button fx:id="rulesButton" layoutX="770.0" layoutY="483.0" mnemonicParsing="false" styleClass="otherButtons" stylesheets="@../myCss.css" text="Rules" />
-            <Button fx:id="closeButton" layoutX="878.0" layoutY="483.0" mnemonicParsing="false" onAction="#close" styleClass="otherButtons" stylesheets="@../myCss.css" text="Close" />
+            <Button fx:id="closePits" layoutX="878.0" layoutY="483.0" mnemonicParsing="false" onAction="#close" styleClass="otherButtons" stylesheets="@../myCss.css" text="Close" />
             <Button fx:id="P2House" alignment="CENTER" layoutX="36.0" layoutY="199.0" mnemonicParsing="false" prefHeight="156.0" prefWidth="118.0" styleClass="p2buttons" stylesheets="@../myCss.css" />
             <Button fx:id="P1House" alignment="CENTER" layoutX="860.0" layoutY="199.0" mnemonicParsing="false" prefHeight="156.0" prefWidth="118.0" styleClass="p1buttons" stylesheets="@../myCss.css" />
             <Text fill="#737cfc" layoutX="190.0" layoutY="88.0" strokeType="OUTSIDE" strokeWidth="0.0" text="P2 Score:" textAlignment="JUSTIFY" wrappingWidth="80.00000286102295">
@@ -116,7 +116,7 @@
                <font>
                   <Font size="18.0" />
                </font></TextField>
-            <Button fx:id="startGameButton" layoutX="36.0" layoutY="52.0" mnemonicParsing="false" onAction="#buttonNames" styleClass="otherButtons" stylesheets="@../myCss.css" text="START GAME" />
+            <Button fx:id="startGameButton" layoutX="36.0" layoutY="52.0" mnemonicParsing="false" onAction="#cleanup" styleClass="otherButtons" stylesheets="@../myCss.css" text="START GAME" />
          </children>
       </AnchorPane>
    </children>
